--- a/Angular-bonds/bonds-calculations/src/app/app.component.html
+++ b/Angular-bonds/bonds-calculations/src/app/app.component.html
@@ -1,3 +1,2 @@
 <span>{{ title }} app is running!</span>
-<input type="text" [(ngModel)]="name">
-<!-- <p>{{ name }}</p> -->
+<app-bonds-ytm-calc></app-bonds-ytm-calc>
